--- a/scss/style.scss
+++ b/scss/style.scss
@@ -143,7 +143,7 @@ footer {
 /* About Page */
 .about {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 2fr 1fr);
 }
 
 
